# RSVP-BCI-Target-Identification-Localization

./: .gitignore  BCI_ENV_Package_Requirements.txt  ERPimages_C3.ipynb  FeupDroneImages_Protocol_custom.py  README.md  RSVP_dataset_analysis.ipynb  RSVP_dataset_analysis.py  acquiredDataAnalysis.ipynb  acquisition_comparison.py  preprareAcqProtocol_DroneImages.ipynb  preprareAcqProtocol_FEUP_droneImg.ipynb
AcquisitionProtocols/: FEUP_droneImages.xlsx  MADALENA_droneImages.xlsx
AcquisitionProtocols/PsychXRBuild/: Using Oculus in porotocol - Failed.txt
AcquisitionProtocols/PsychXRBuild/OculusSDK/: CMakeLists.txt  common.props
AcquisitionProtocols/PsychXRBuild/OculusSDK/LibOVRKernel/: CMakeLists.txt
AcquisitionProtocols/PsychXRBuild/OculusSDK/LibOVRKernel/Src/Kernel/: OVR_Allocator.cpp  OVR_DebugHelp.cpp  OVR_Timer.cpp  OVR_Types.h
AcquisitionProtocols/PsychXRBuild/OculusSDK/LibOVRKernel/Src/Tracing/: LibOVREvents.h
AcquisitionProtocols/PsychXRBuild/OculusSDK/LibOVRKernel/Src/Util/: Util_D3D11_Blitter.cpp  Util_Direct3D.h
AcquisitionProtocols/PsychXRBuild/OculusSDK/Logging/: CMakeLists.txt
AcquisitionProtocols/PsychXRBuild/OculusSDK/Logging/Logging/: Logging_Library.h  Logging_Tools.h
AcquisitionProtocols/PsychXRBuild/OculusSDK/Logging/Projects/Windows/VS2015/: PCSDK_Logging.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Logging/src/: Logging_Library.cpp  Logging_Tools.cpp
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/: CMakeLists.txt
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/CommonSrc/: CMakeLists.txt
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/CommonSrc/Platform/: Gamepad.h  Platform.cpp  Platform.h  Platform_Default.h  Win32_Gamepad.cpp  Win32_Gamepad.h  Win32_Platform.cpp  Win32_Platform.h
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/CommonSrc/Render/: Render_D3D11_Device.cpp  Render_D3D11_Device.h  Render_Device.cpp  Render_Device.h  Render_GL_Device.cpp  Render_GL_Device.h  Render_GL_Win32_Device.cpp  Render_GL_Win32_Device.h  Render_LoadTextureDDS.cpp  Render_LoadTextureTGA.cpp  Render_XmlSceneLoader.cpp  Render_XmlSceneLoader.h
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/CommonSrc/Util/: OptionMenu.cpp  OptionMenu.h  RenderProfiler.h  StringHelper.cpp
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/GuardianSystemDemo/: CMakeLists.txt  Win32_DirectXAppUtil.h  main.cpp
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusPerfStatsSample/: CMakeLists.txt  OculusPerfStatsSample.cpp
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/: CMakeLists.txt
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/Common/: Win32_DirectX12AppUtil.h  Win32_DirectXAppUtil.h  Win32_GLAppUtil.h  Win32_VulkanAppUtil.h  Win32_d3dx12.h
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_DX11/: CMakeLists.txt  main.cpp
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_DX11/Projects/Windows/VS2015/: OculusRoomTiny_DX11.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_DX11/Projects/Windows/VS2017/: OculusRoomTiny_DX11.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_DX12/: CMakeLists.txt  main.cpp
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_DX12/Projects/Windows/VS2015/: OculusRoomTiny_DX12.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_DX12/Projects/Windows/VS2017/: OculusRoomTiny_DX12.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_GL/: CMakeLists.txt  main.cpp
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_GL/Projects/Windows/VS2015/: OculusRoomTiny_GL.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_GL/Projects/Windows/VS2017/: OculusRoomTiny_GL.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_Vk/: CMakeLists.txt  main.cpp
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_Vk/Projects/Windows/VS2015/: OculusRoomTiny_Vk.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusRoomTiny/OculusRoomTiny_Vk/Projects/Windows/VS2017/: OculusRoomTiny_Vk.vcxproj  OculusRoomTiny_Vk.vcxproj.filters
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusWorldDemo/: CMakeLists.txt  OculusWorldDemo.h  OculusWorldDemo_Scene.cpp  PerfCapture.cpp  PerfCapture.h  Player.cpp  Player.h  Script.cpp  Script.h  Tracker.cpp  Tracker.h
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusWorldDemo/Projects/Windows/VS2015/: OculusWorldDemo.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/OculusWorldDemo/Projects/Windows/VS2017/: OculusWorldDemo.vcxproj
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/Projects/Windows/VS2015/: Samples.sln
AcquisitionProtocols/PsychXRBuild/OculusSDK/Samples/Projects/Windows/VS2017/: Samples.sln
AcquisitionProtocols/RealDroneImg_Protocol/: FeupDroneImages_Protocol.psyexp  FeupDroneImages_Protocol_custom.py  FeupDroneImages_Protocol_lastrun.py  FeupDroneImages_Protocol_test.py  FeupDroneImages_Protocol_train.py
Code/: RSVP_dataset_analysis.ipynb  preprareAcqProtocol_DroneImages.ipynb
(+324 files in other folders)
